force-app/main/default/objects/AccountApproval__c/AccountApproval__c.object-meta.xml
<CustomObject>
    <label>AccountApproval</label>
    <nameField>
        <label>AccountApproval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountApprovals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>