force-app/main/default/objects/AccountApproval__c/fields/Account_Name__c.field-meta.xml
<CustomField>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountApprovals</relationshipLabel>
        <relationshipName>AccountApprovals</relationshipName>
        <type>Lookup</type>
    </CustomField>