force-app/main/default/objects/AccountApproval__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
        <fullName>Approver_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountApprovals</relationshipName>
        <type>Lookup</type>
    </CustomField>