force-app/main/default/objects/AccountApproval__c/fields/Title__c.field-meta.xml
<CustomField>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>